--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,13 @@ jobs:
         if: matrix.os == 'ubuntu'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake build-essential gcc-${{ matrix.gcc }} g++-${{ matrix.gcc }}
+          sudo apt-get \
+            install -y \
+            cmake \
+            build-essential \
+            gcc-${{ matrix.gcc }} \
+            g++-${{ matrix.gcc }} \
+            just
           echo "CC=gcc-${{ matrix.gcc }}" >> $GITHUB_ENV
           echo "CXX=g++-${{ matrix.gcc }}" >> $GITHUB_ENV
           echo "C_STD=${{ matrix.c_std }}" >> $GITHUB_ENV
